--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,5 +137,6 @@
     <string name="try_again">Try Again</string>
     <string name="qr_code">qr_code</string>
     <string name="contact_us"><u>Contact Us</u></string>
+    <string name="spannable_text"><![CDATA[By clicking next, you agree to Term of Service & Privacy Policy]]></string>
 
 </resources>
