--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,5 +151,7 @@
     <string name="pastagree">Past Agreements</string>
     <string name="contact_us"><u>Contact Us</u></string>
     <string name="spannable_text"><![CDATA[By clicking next, you agree to Term of Service & Privacy Policy]]></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
