--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,6 +171,10 @@
     <string name="PST">Pacific (PST)</string>
     <string name="AST">Alaskan (AST)</string>
     <string name="HST">Hawaii (HST)</string>
+    <string name="set_up_face_id">Set Up Face ID</string>
+    <string name="enable_face_message">Enable Face ID to use face recognition to complete payments quickly and securely.</string>
+    <string name="set_up_touch_id">Set Up Touch ID</string>
+    <string name="enable_touch_message">Enable Touch ID to use touch recognition to complete payments quickly and securely.</string>
 
 
 </resources>
