--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,6 @@
     <string name="password_strength_very_strong">Very Strong</string>
     <string name="emailotpmsg">We have sent you a 6-digit code sent to the register email address: </string>
 
-
     <string name="remembertxt">   Remember Me</string>
     <string name="forgotpwdtxt">Forgot Password</string>
     <string name="retrievemail">Retrieve Email</string>
@@ -175,6 +174,8 @@
     <string name="enable_face_message">Enable Face ID to use face recognition to complete payments quickly and securely.</string>
     <string name="set_up_touch_id">Set Up Touch ID</string>
     <string name="enable_touch_message">Enable Touch ID to use touch recognition to complete payments quickly and securely.</string>
+
+    <string name="edittext_hint"><font size="40">************</font></string>
 
 
 </resources>
