--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,6 +181,10 @@
     <string name="bank_exhaust">There is an account limit of 4 total bank accounts, and it looks like you surpassed that number via the Fiserv bank account verification process. Please try again or remove one or more of your current bank account payment methods.</string>
 
     <string name="currency">CYN</string>
+    <string name="reference_id_hyper"><u>[Reference ID (hyper</u></string>
+    <string name="chargeback_transaction"><u>link to the chargeback transaction]</u></string>
+
+
 
 
 </resources>
