Removed unnecessary files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,6 +182,7 @@
 
     <string name="currency">CYN</string>
     <string name="maxlength">10</string>
+    <string name="maxlendecimal">16</string>
 
 
 </resources>
