--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,7 +176,8 @@
     <string name="enable_touch_message">Enable Touch ID to use touch recognition to complete payments quickly and securely.</string>
     <string name="error_code">117004</string>
     <string name="bank_error_code">117007</string>
-    <string name="view_all">View all</string>
+    <string name="view_all"><u>View all</u></string>
+    <string name="view_less"><u>View less</u></string>
     <string name="bank_exhausthead">Too Many Bank Accounts</string>
     <string name="bank_exhaust">There is an account limit of 4 total bank accounts, and it looks like you surpassed that number via the Fiserv bank account verification process. Please try again or remove one or more of your current bank account payment methods.</string>
 
