--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,6 +187,7 @@
 
     <string name="maxlength">8</string>
     <string name="maxlendecimal">13</string>
+    <string name="payrequestMaxAmt">1000000</string>
 
 
 </resources>
