--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,5 +189,12 @@
     <string name="maxlendecimal">13</string>
     <string name="payrequestMaxAmt">1000000</string>
 
+    <string name="calendar_sunday">S</string>
+    <string name="calendar_monday">M</string>
+    <string name="calendar_tuesday">T</string>
+    <string name="calendar_wednesday">W</string>
+    <string name="calendar_thursday">T</string>
+    <string name="calendar_friday">F</string>
+    <string name="calendar_saturday">S</string>
 
 </resources>
