--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,5 +196,6 @@
     <string name="calendar_thursday">T</string>
     <string name="calendar_friday">F</string>
     <string name="calendar_saturday">S</string>
+    <string name="something_went_wrong">something went wrong</string>
 
 </resources>
