Bug Fixes and QA end point change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,5 +198,6 @@
     <string name="calendar_saturday">S</string>
     <string name="something_went_wrong">something went wrong</string>
     <string name="waddress_length">10</string>
+    <string name="tokens_msg">Tokens cannot Pay/Request from or to your wallet</string>
 
 </resources>
