--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -236,4 +236,36 @@
     <string name="add">Add</string>
     <string name="ca">CA</string>
     <string name="zipcode">Zipcode</string>
+    <string name="fire_bbq">Fire BBQ</string>
+    <string name="account_id">Account ID M-1234</string>
+    <string name="active">Active</string>
+    <string name="version_2_0">Version 2.0</string>
+    <string name="log_out">Log Out</string>
+    <string name="fees">Fees</string>
+    <string name="team">Team</string>
+    <string name="beneficial_owners">Beneficial Owners</string>
+    <string name="dba_information">DBA Information</string>
+    <string name="company_information">Company Information</string>
+    <string name="merchant_s_settings">Merchant’s Settings</string>
+    <string name="user_settings">User Settings</string>
+    <string name="transactions">Transactions</string>
+    <string name="sale_order_token">Sale Order: Token</string>
+    <string name="refund">Refund</string>
+    <string name="token_account">Token Account</string>
+    <string name="instan_pay">Instant Pay</string>
+    <string name="failed_bank_withdraw">Failed Bank Withdraw</string>
+    <string name="other_fees">Other Fees</string>
+    <string name="monthly_fee">Monthly Fee</string>
+    <string name="buy_token">Buy Token</string>
+    <string name="withdraws">Withdraws</string>
+    <string name="remove_team_members">Remove Team Members</string>
+    <string name="account_permissions">Are you sure to remove [Name], will be \npermanently removed from your user list \nand All lose access to their shared \naccount permissions</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
+    <string name="add_team_members">Add Team Members</string>
+    <string name="title_activity_closing_batch">ClosingBatchActivity</string>
+    <string name="closing_batch">Closing Batch</string>
+    <string name="send_to">Send to</string>
+    <string name="business_token_account">Business Token Account</string>
+    <string name="available_balance">Available Balance 99.00 CYN</string>
 </resources>
