--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -199,5 +199,6 @@
     <string name="something_went_wrong">something went wrong</string>
     <string name="waddress_length">10</string>
     <string name="tokens_msg">Tokens cannot Pay/Request from or to your wallet</string>
+    <string name="expirydate">60</string>
 
 </resources>
