Screens Design BuyToken Signet WithdrawFailedBankWithdrawActivity ReservePayoutActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -318,4 +318,32 @@
     <string name="send_to">Send to</string>
     <string name="business_token_account">Business Token Account</string>
     <string name="available_balance">Available Balance 99.00 CYN</string>
+    <string name="buy_tokens_signet">Buy Tokens - Signet</string>
+    <string name="descriptor_name">Descriptor Name</string>
+    <string name="deposit_id">Deposit ID</string>
+    <string name="reference_id">Reference ID</string>
+    <string name="signet_wallet_id">Signet Wallet ID</string>
+    <string name="name_on_account">Name on Account</string>
+    <string name="cyn">CYN</string>
+    <string name="status">Status</string>
+    <string name="completed">Completed</string>
+    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
+    <string name="purchase_amount">Purchase Amount</string>
+    <string name="processing_fee">Processing Fee</string>
+    <string name="total_amount">Total Amount</string>
+    <string name="transaction_details">Transaction Details</string>
+    <string name="failed_reason">Failed Reason</string>
+    <string name="add_the_reason_code_from_signature_bank">[add the reason code from Signature Bank]</string>
+    <string name="withdraw_id">Withdraw ID</string>
+    <string name="withdraw_amount">Withdraw Amount</string>
+    <string name="withdraw_amount_processing_fee">( Withdraw Amount + Processing Fee)</string>
+    <string name="ach_information">ACH Information</string>
+    <string name="reserve_release">Reserve Release</string>
+    <string name="released_on">Released on</string>
+    <string name="reserve_rules">Reserve Rules</string>
+    <string name="deposit_to">Deposit To</string>
+    <string name="reserve_information">Reserve Information</string>
+    <string name="reserve_held">Reserve Held</string>
+    <string name="reserved_on">Reserved on</string>
+    <string name="reserve_id">Reserve ID</string>
 </resources>
