Screens Design ApplicationCanceledActivity merchant_appl_verification_failed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -346,4 +346,8 @@
     <string name="reserve_held">Reserve Held</string>
     <string name="reserved_on">Reserved on</string>
     <string name="reserve_id">Reserve ID</string>
+    <string name="merchant_application_nverification_failed">Merchant Application \nVerification Failed</string>
+    <string name="unable_to_verify">We were unable to verify your business account\nbecause of an issue with your bank account.</string>
+    <string name="please_try_again">Please try again or try a different bank account</string>
+    <string name="application_canceled">Application Canceled</string>
 </resources>
