--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -318,4 +318,5 @@
     <string name="send_to">Send to</string>
     <string name="business_token_account">Business Token Account</string>
     <string name="available_balance">Available Balance 99.00 CYN</string>
+    <string name="receive_payment">Receive Payment</string>
 </resources>
